fix(atomic.css): add missing margin-inline property to container class

--- a/public/css/components/atomic.css
+++ b/public/css/components/atomic.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  margin-inline: auto;
   @media (width >= 40rem) {
     max-width: 40rem;
   }
